color palatte added

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+:root {
+  --primary-color: #f08b13 !important;
+  --secondary-color: rgba(244, 179, 0, 1) !important;
+  --error-color: rgba(219, 69, 55, 1) !important;
+  --success-color: rgba(15, 157, 88, 1) !important;
+  --white-color: rgba(255, 255, 255, 1) !important;
+}
