--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,28 @@
 .navbar{
     height: 50px;
-    background-color:var(--primary-color)
+    background-color:var(--primary-color);
+    display: flex;
+    justify-content: center
+}
+.navContainer{
+    width: 100%;
+    max-width: 1024px;
+    color: var(--white-color);
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+.logo{
+    font-weight: 700;
+    font-size: 18px;
+}
+.navButton{
+    margin-left: 20px;
+    border:none;
+    padding: 7px 15px;
+    cursor: pointer;
+    color: var(--white-color);
+    background-color: var(--secondary-color);
+    border-radius: 4px;
+    font-weight: 700;
 }
