desc design done

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -30,7 +30,9 @@
     font-weight: 500;
 }
 .headerDescription{
+    font-size: 18px;
     margin: 20px 0px;
+    color:gainsboro
 }
 .headerBtn{
     border:none;
