--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -66,7 +66,23 @@
     border-radius: 4px;
     position: absolute;
     bottom: -25px;
+    width: 100%;
+    max-width: 1024px;
 }
 .headerIcon{
     color:lightgray;
+}
+.headerSearchItem{
+    display: flex;
+    align-items: center;
+    gap: 10px
+}
+.headerSearchInput{
+    border:none;
+    outline:none;
+    font-family: 'Roboto', sans-serif;
+    color: #0071C2;
+    font-weight: 700;
+    font-size: 14px;
+    letter-spacing: 1px;
 }
