--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -94,3 +94,36 @@
     position:absolute;
     top:50px;
 }
+.options{
+    position:absolute;
+    top:50px;
+    background-color: #fff;
+    color:gray;
+    border-radius:5px;
+    box-shadow: 0px 1px 8px 3px rgba(122,122,122,0.53);
+    -webkit-box-shadow: 0px 1px 8px 3px rgba(122,122,122,0.53);
+    -moz-box-shadow: 0px 1px 8px 3px rgba(122,122,122,0.53);
+    padding: 10px
+}
+.optionItem{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 10px;
+}
+.optionCounter{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 12px;
+    color: var(--primary-color);
+    font-weight: bold;
+}
+.optionCounter button{
+    color: var(--white-color);
+    background-color: var(--btn-primary-color);
+    border:none;
+    padding: 5px 15px;
+    border-radius: 3px;
+    cursor: pointer;
+}
