diable issue fixed

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -127,3 +127,7 @@
     border-radius: 3px;
     cursor: pointer;
 }
+.optionCounterButton:disabled {
+    background-color: gray;
+    cursor: not-allowed
+}
