--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -16,6 +16,7 @@
 .logo{
     font-size: 32px;
     font-family: 'Dancing Script', cursive;
+    cursor: pointer;
 }
 .navButton{
     margin-left: 20px;
